Fix current track info in nav bar. Clicking current track jumps browser to that file

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -27,14 +27,30 @@ body {
 
 }
 
-.curInfo {
-    display: inline-block;
+.marquee {
+    width: 300px;
+    margin: 0 auto;
+    overflow: hidden;
+    white-space: nowrap;
+    box-sizing: border-box;
 }
 
-#curInfo-artist, #curInfo-album, #curInfo-title {
+.marquee span {
     display: inline-block;
+    padding-left: 100%;
+    animation: marquee 30s linear infinite;
 }
 
+.marquee span:hover {
+    animation-play-state: paused;
+}
+
+@keyframes marquee {
+    0% { transform: translate(0, 0))}
+    100% { transform: translate(-100%, 0)}
+}
+
+ /*Disable boot strap collapse/expand animations*/
 .collapsing {
     -webkit-transition: none;
     transition: none;
